crates/forge/tests/e2e/snapshots/gas_report/main__e2e__gas_report__snap_recursive_calls@2.20.0.snap
---
source: crates/forge/tests/e2e/gas_report.rs
expression: stdout
---



[PASS] debugging_integrationtest::test_trace::test_debugging_trace_success (l1_gas: ~0, l1_data_gas: ~288, l2_gas: ~1516330)
╭-------------------------+-------+--------+--------+---------+---------╮
| SimpleContract Contract |       |        |        |         |         |
+=======================================================================+
| Function Name           | Min   | Max    | Avg    | Std Dev | # Calls |
|-------------------------+-------+--------+--------+---------+---------|
| execute_calls           | 38350 | 742830 | 242718 | 278632  | 5       |
|-------------------------+-------+--------+--------+---------+---------|
| fail                    | 17950 | 17950  | 17950  | 0       | 1       |
╰-------------------------+-------+--------+--------+---------+---------╯
